Diseño flex para el menú de navegación y el diseño del Hero

--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freelancer en Siguatepeque</title>
     <link rel="stylesheet" href="css/normalize.css" />
+    <!-- Google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Krub:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font awesome -->
+    <script
+      src="https://kit.fontawesome.com/d7bc68b35c.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Nuestro estilo personalizado -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Menú de navegción -->
+    <div class="header">
+      <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Nosotros</a>
+        <a href="#">Clientes</a>
+        <a href="#">Contáctame</a>
+      </nav>
+    </div>
+    <!-- Hero -->
+    <div class="hero">
+      <div class="hero-content">
+        <h1>Diseño y desarrollo freelancer</h1>
+        <p><i class="fas fa-map-marker-alt"></i> Siguatepeque, Comayagua</p>
+        <a href="#contacto">Contáctame</a>
+      </div>
+    </div>
+  </body>
 </html>
