Estilos para el Hero. Creación de un filtro para las imágenes. Estilo para botón principal.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="hero-content">
         <h1>Diseño y desarrollo freelancer</h1>
         <p><i class="fas fa-map-marker-alt"></i> Siguatepeque, Comayagua</p>
-        <a href="#contacto">Contáctame</a>
+        <a href="#contacto" class="button">Contáctame</a>
       </div>
     </div>
   </body>
