Información sobre los servicios que se ofrecen. Estilos para los servicios. Comienzo del formulario de contacto.

--- a/index.html
+++ b/index.html
@@ -36,5 +36,79 @@
         <a href="#contacto" class="button">Contáctame</a>
       </div>
     </div>
+    <!-- Servicios ofrecidos -->
+    <div class="container">
+      <main class="services">
+        <h2>Nuestros servicios</h2>
+        <div class="services-container">
+          <div class="service">
+            <h3>Diseño Web</h3>
+            <div class="icons"><i class="fas fa-pen-nib"></i></div>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+            debitis voluptas unde illum autem quod nostrum excepturi hic eos
+            deleniti vitae magni sed, dignissimos a fugiat soluta beatae?
+            Itaque, architecto.
+          </div>
+          <div class="service">
+            <h3>Aplicaciones móviles</h3>
+            <div class="icons">
+              <i class="fab fa-android"></i>
+              <i class="fab fa-apple"></i>
+            </div>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum vel
+            at consequatur accusamus excepturi vero inventore distinctio.
+            Nesciunt quos unde consectetur sapiente voluptatum sed quod, soluta
+            porro, eos, quam rem?
+          </div>
+          <div class="service">
+            <h3>Inteligencia de negocios</h3>
+            <div class="icons"><i class="fas fa-tachometer-alt"></i></div>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, vel,
+            veniam praesentium a natus, nulla quod aliquam soluta velit neque
+            sapiente dolor architecto deserunt fugit ab id minima beatae sit!
+          </div>
+        </div>
+      </main>
+
+      <div class="contact">
+        <h2>Contáctame</h2>
+        <form action="#">
+          <legend>Para contactarme, llena todos los campos.</legend>
+          <div class="fields">
+            <div class="field">
+              <label for="nombre">Nombre</label>
+              <input
+                type="text"
+                name="nombre"
+                placeholder="Ingresa tu nombre completo"
+              />
+            </div>
+            <div class="field">
+              <label for="telefono">Tel´efono</label>
+              <input
+                type="text"
+                name="telefono"
+                placeholder="Tu número de contacto"
+              />
+            </div>
+            <div class="field">
+              <label for="correo">Correo electrónico</label>
+              <input
+                type="mail"
+                name="correo"
+                placeholder="juanperez@correo.com"
+              />
+            </div>
+            <div class="field">
+              <label for="mensaje">Mensaje</label>
+              <textarea name="mensaje"></textarea>
+            </div>
+          </div>
+          <div class="send">
+            <input type="submit" class="button" value="Enviar" />
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
