Finalización de los estilos para el formnulario de contácto.

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
               />
             </div>
             <div class="field">
-              <label for="telefono">Tel´efono</label>
+              <label for="telefono">Teléfono</label>
               <input
                 type="text"
                 name="telefono"
                 placeholder="Tu número de contacto"
               />
             </div>
-            <div class="field">
+            <div class="field width-100">
               <label for="correo">Correo electrónico</label>
               <input
                 type="mail"
@@ -99,7 +99,7 @@
                 placeholder="juanperez@correo.com"
               />
             </div>
-            <div class="field">
+            <div class="field width-100">
               <label for="mensaje">Mensaje</label>
               <textarea name="mensaje"></textarea>
             </div>
